complete cleanup + index.html complete fix
fixed website not showing up when using default URL

--- a/nico/css/style.css
+++ b/nico/css/style.css
@@ -93,6 +93,11 @@ body {
   left: -100%;
 }
 
+.active, .active:hover {
+  border-color: #4bb543;
+  color: #4bb543;
+}
+
 /* Navigation end */
 
 /* Content start */
@@ -121,6 +126,9 @@ body {
   display: block;
   margin-left: 10px;
   width: 80%;
+}
+.storyboard {
+  width: 49%;
 }
 
 .border {
